BUGFIX: Search bar overlapped first search entry & not centered. Attempt to add Camera to create profile

--- a/src/pages/search/search.scss
+++ b/src/pages/search/search.scss
@@ -4,11 +4,12 @@ page-search {
   
   .searchbar-firsttime {
     top: 35%;
+    padding: 0 !important;
   }
 
   .searchbar {
     background-color: white;
-    padding-top: 35px;
+    padding: 35px 0 0 0 !important;
     top: 50px;
   }
 
@@ -29,6 +30,7 @@ page-search {
 
   .search {
     position: fixed;
+    left: 8px;
     float: left;
     width: 95%;
   }
